--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 		 <div class="container">
 			 <div class="row">
 				 <div class="col-md-12">
-					  <h1>Hello World!</h1>
-					  <p class="lead">This is an Awesome App Landing Page</p>
+					  <h1>What are smartphones made of?</h1>
 					  
 					  <div class="carousel-iphone">
 					  	<div id="carousel-example-generic" class="carousel slide">
@@ -85,34 +84,6 @@
 	  
 	  
 	  <!-- PURCHASE
-	      ================================================== -->
-	  <section class="purchase">
-		  <div class="container">
-			  <div class="row">
-				  <div class="col-md-offset-2 col-md-8">
-					 <h1>Everything's easily customizable.</h1>
-					 	    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-					 	    <button type="button" class="app-store"></button>	
-				  </div>
-			  </div>
-		  </div>
-	  </section>
-	  
-	  
-	  <!-- PAYOFF 
-	      ================================================== -->
-	  <section class="payoff">
-		<div class="container">
-			  <div class="row">
-				  <div class="col-md-12">
-					  <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</h1>
-				  </div>
-			  </div>
-		  </div>	  
-	  </section>
-	  
-	  
-	  <!-- DETAILS 
 	      ================================================== -->
 	  <section class="detail">
 		<div class="container">
