Test on third slide

--- a/index.html
+++ b/index.html
@@ -99,15 +99,14 @@
                         <div class="col-md-6 opaline col-md-offset-6">
                             <div class="row">
                                 <div class="col-md-offset-1 col-md-10">
-                                    <h3>Screen glass</h3>
+                                    <h3>Screen</h3>
                                     <h5>Most of the smartphone's screen is made out of 13 different materials.</h5>
-                                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                                 </div>
                             </div>
                             <div class="row text-center">
                                 <!-- set the numbers in assets/js/scripts.js  -->
                                 <div class="col-md-4 boxes col-xs-6 col-xs-offset-3 col-lg-4 col-lg-offset-1 col-md-offset-1 col-sm-6 wow fadeInUp">
-                                    <h5>Indium</h5>
+                                    <h5>Indium Oxygen Aluminium Silcon Yttrium Gadolinium</h5>
                                 </div>
                                 <div class="col-md-4 boxes col-xs-6 col-xs-offset-3 col-lg-4 col-lg-offset-2 col-md-offset-2 col-sm-6 wow fadeInUp" data-wow-delay="300ms">
                                     <h5>Tin</h5>
