Add carbon picture

--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
                     <div class="col-md-7">
                         <h2>Battery.</h2>
                         <p>It is made of 5 different material.</p>
-                        <a class="btn btn-danger btn-lg" href="#">Take a Look <i class="fa fa-arrow-circle-o-right"></i> </a>
                     </div>
+                    <div class="one">
+                    <img src="images/carbon.png" alt="" />
+</div>
                     <div class="col-md-5">
                         <a href="#">
                             <img src="https://unsplash.it/1200/1200?image=839" alt="" class="img-responsive">
