--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                     </div>
                     <div class="one">
                     <img src="images/carbon.png" alt="" />
-</div>
-                    <div class="col-md-5">
-                        <a href="#">
-                            <img src="https://unsplash.it/1200/1200?image=839" alt="" class="img-responsive">
-                        </a>
+                    <img src="images/oxygen.jpg" alt="" />
+                    <img src="images/phosphorus.jpg" alt="" />
+                    <img src="images/antimony.png" alt="" />
+                    <img src="images/gallium.png" alt="" />
                     </div>
+
                 </div>
             </div>
         </section>
