--- a/index.html
+++ b/index.html
@@ -152,6 +152,31 @@
                 </div>
             </div>
         </section>
+
+  <div class="container-fluid">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 opaline col-md-offset-6">
+                            <div class="row">
+                                <div class="col-md-offset-1 col-md-10">
+                                    <h3>Graphene</h3>
+                                    <h5>Graphene can conduct electricity better than copper and has strength stronger than steel. It is composed with a sheet of carbon atoms. The material is also flexible. That’s why it is good for future touch screen</h5>
+                                </div>
+                            </div>
+                            <div class="row text-center">
+                                <!-- set the numbers in assets/js/scripts.js  -->
+                                <div class="col-md-4 boxes col-xs-6 col-xs-offset-3 col-lg-4 col-lg-offset-1 col-md-offset-1 col-sm-6 wow fadeInUp">
+                                    <h5>Indium Oxygen Aluminium Silcon Yttrium Gadolinium</h5>
+                                </div>
+                                <div class="col-md-4 boxes col-xs-6 col-xs-offset-3 col-lg-4 col-lg-offset-2 col-md-offset-2 col-sm-6 wow fadeInUp" data-wow-delay="300ms">
+                                    <h5>Tin</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         <section id="photos" class="gallery wow fadeInUp" data-wow-delay="300ms">
             <div class="container">
                 <div class="row">
