--- a/index.html
+++ b/index.html
@@ -49,29 +49,9 @@
         </ul>
       </nav>
 
-      <!-- Site Overlay -->
+      
+     <!-- Site Overlay -->
       <div class="site-overlay"></div>
-
-        <header id="home">
-            <div class="container-fluid">
-                <!-- change the image in style.css to the class header .container-fluid [approximately row 50] -->
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-3 col-xs-10">
-                            <a href="#" class="thumbnail logo">
-                                <img src="images/your_logo.png" alt="" class="img-responsive">
-                            </a>
-                        </div>
-                        <div class="col-md-1 col-md-offset-8 col-xs-2 text-center">
-                          <div class="menu-btn"><span class="hamburger">&#9776;</span></div>
-                        </div>
-                    </div>
-                    <div class="jumbotron">
-                        <h1><small>How are</small></br>
-						<strong>Smartphones made?</strong></h1>
-                    </div>
-                </div>
-            </div>
         </header>
         <section id="feat">
             <div class="container">
@@ -165,13 +145,6 @@
                             </div>
                             <div class="row text-center">
                                 <!-- set the numbers in assets/js/scripts.js  -->
-                                <div class="col-md-4 boxes col-xs-6 col-xs-offset-3 col-lg-4 col-lg-offset-1 col-md-offset-1 col-sm-6 wow fadeInUp">
-                                    <h5>Indium Oxygen Aluminium Silcon Yttrium Gadolinium</h5>
-                                </div>
-                                <div class="col-md-4 boxes col-xs-6 col-xs-offset-3 col-lg-4 col-lg-offset-2 col-md-offset-2 col-sm-6 wow fadeInUp" data-wow-delay="300ms">
-                                    <h5>Tin</h5>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -271,7 +244,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <h3>Your Logo</h3>
-                        <p>© 2016 Your Company. Designed and Developed by <a target="_blank" href="http://www.themeinthebox.com">ThemeintheBox.com</a></p>
+                        <p>© 2016 Your Company. Designed and Developed by <a target="_blank" href="http://www.themeinthebox.com">Youngbo</a></p>
                     </div>
                     <div class="col-md-4">
                         <p class="text-right social"><i class="typcn typcn-social-facebook-circular"></i><i class="typcn typcn-social-twitter-circular"></i><i class="typcn typcn-social-tumbler-circular"></i><i class="typcn typcn-social-github-circular"></i><i class="typcn typcn-social-dribbble-circular"></i></p>
